# plexsubs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
plexsubs/: __init__.py  main.py
plexsubs/api/: __init__.py  discovery.py  errors.py  models.py
plexsubs/config/: __init__.py  settings.py  validators.py
plexsubs/core/: __init__.py  discovery.py  language_detector.py  release_matcher.py  subtitle_manager.py
plexsubs/plex/: __init__.py  client.py  webhook.py
plexsubs/providers/: __init__.py  base.py  opensubtitles.py  registry.py
plexsubs/utils/: __init__.py  constants.py  env_utils.py  exceptions.py  http_client.py  language_codes.py  logging_config.py  path_utils.py  retry.py  xml_utils.py
tests/: test_language_codes.py  test_path_utils.py  test_retry.py  test_validators.py  test_xml_utils.py
